--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ actix-service = "2"
 [dependencies]
 actix-web = "4.8"
 anyhow = { version = "1.0", features = ["backtrace"] }
+aws-config = "1.5"
+aws-sdk-s3 = "1.42"
 backon = "0.4"
+base64 = "0.22"
 chrono =  { version = "0.4", features = ["serde"] }
 clap = { version = "4.4", features = ["derive", "env"] }
 futures-core = "0.3"
