fix(thes-2455): fix composition

--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -92,10 +92,11 @@ steps:
         mockoon:
           image: mockoon/cli:latest
           ports:
-            - '3001:3001'
+            - 3001
           volumes:
-            - ${{CF_VOLUME_PATH}}/tests/mockoon/cerved.json:cerved.json
-          command: ["--data", "cerved.json"]
+            - '${{CF_VOLUME_NAME}}:${{CF_VOLUME_PATH}}'
+          working_dir: '${{CF_VOLUME_PATH}}'
+          command: [ "--data", "tests/mockoon/cerved.json" ]
     composition_candidates:
       run_tests:
         image: ${{build_tests_image}}
