fix(thes-2455): try to use docker-compose.yml

--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -86,15 +86,7 @@ steps:
   run_tests:
     stage: build
     type: composition
-    composition:
-      version: '3.0'
-      services:
-        mockoon:
-          image: mockoon/cli:latest
-          ports:
-            - 3001
-          working_dir: '${{CF_VOLUME_PATH}}'
-          command: [ "--data", "tests/mockoon/cerved.json" ]
+    composition: 'docker-compose.yml'
     composition_candidates:
       run_tests:
         image: ${{build_tests_image}}
