--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,9 @@ futures-util = "0.3"
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-slog = "2.7"
-slog-async = "2.8"
-slog-envlogger = "2.2"
-slog-json = "2.6"
 tokio = { version = "1 ", features = ["macros", "rt"] }
-typed-builder = "0.19"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["json"] }
 url = "2.5"
 uuid = { version = "1.10", features = ["fast-rng", "v7", "serde"] }
 
